--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "chart.js": "^3.9.1",
     "chartjs-plugin-annotation": "^1.2.1",
     "vue": "^3.2.0",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "pinia": "^2.0.0",
+    "quill": "^1.3.7"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.0"
