--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,14 @@
 {
   "name": "learning-platform-frontend",
   "version": "1.0.0",
-  "description": "Frontend für die nutzungsfreundliche Lernplattform",
+  "description": "Frontend für die Lernplattform",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "chartjs-plugin-annotation": "^1.2.1",
     "vue": "^3.2.0",
