Add interactive tutorial, Luciole font, customizable profile data display, new profile pages, and course quizzes
Introduced an interactive tutorial that provides explanations for all displayed controls on each page, customizable per page.

Integrated the Luciole font, optimized for readability, especially for users with visual impairments.

Users can now customize which data is displayed on their profile page (Name, Age, Description, Score, Profile Picture).

Profile pages are newly designed and can be accessed, for example, through comments from other users.

Added quiz functionality to course pages, allowing users to answer questions. Correct answers earn points, and upon answering all questions correctly, users receive a certificate upon course completion.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ frontend/package-lock.json
 /backend/__pycache__
 backend/learning_platform.db
 /backend/routes/__pycache__
+/frontend/src/assets/fonts
+/backend/uploads
